# mcp-paradex-py

./: .env.template  .mcpbignore  CONTRIBUTING.md  Dockerfile  Dockerfile.aws  Makefile  README.md  manifest.json  pyproject.toml  server.json
.claude/: settings.json
.github/workflows/: publish.yml
docs/: deploy-http.md  quickstart.md
spec/: siwe-auth.md
src/mcp_paradex/server/: server.py
src/mcp_paradex/utils/: config.py  paradex_client.py  telemetry.py
tests/: test_telemetry.py
